emb/src/main/java/com/example/emb/global/error/exception/EmbException.java
package com.example.emb.global.error.exception;public class EmbException {
}
